--- a/Jliff.Samples/Jliff.Samples.csproj
+++ b/Jliff.Samples/Jliff.Samples.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="7.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Jliff.Graph\Jliff.Graph.csproj" />
   </ItemGroup>
 
