--- a/Jliff.Tests/Jliff.Tests.csproj
+++ b/Jliff.Tests/Jliff.Tests.csproj
@@ -26,4 +26,13 @@
     <Folder Include="XlfFiles\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Schemas\JLIFF-2.1\jliff-schema-2.1-no-prefix.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="XlfFiles\Ocelot.xlf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
