Changes to synchronize with https://github.com/oasis-tcs/xliff-omos-jliff/commit/4b5c46b2d9f08b68d8caf0b53c84fb40a4d3ac82.

--- a/Jliff.Graph/Jliff.Graph.csproj
+++ b/Jliff.Graph/Jliff.Graph.csproj
@@ -12,7 +12,7 @@
   <ItemGroup>
     <Folder Include="Modules\FormatStyle\" />
     <Folder Include="Modules\Metadata\" />
-    <Folder Include="Modules\SizeRestriction\" />
+    <Folder Include="Modules\TranslationCandidates\" />
     <Folder Include="Modules\Validation\" />
   </ItemGroup>
 
