Various fixes and code rationalization which came up during writing of conversion web site.

--- a/Jliff.Graph/Jliff.Graph.csproj
+++ b/Jliff.Graph/Jliff.Graph.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Modules\ChangeTrack\Backup 1 of ChangeTrack.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="8.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
   </ItemGroup>
