--- a/Jliff.Tests/Jliff.Tests.csproj
+++ b/Jliff.Tests/Jliff.Tests.csproj
@@ -38,6 +38,9 @@
     <None Update="XlfFiles\Ocelot.xlf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="XlfFiles\PlatformTest.xlf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
